# flowbook

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: bench_engine.py  bench_ring_buffer.py
cpp/: bindings.cpp
cpp/include/: concurrent_feed_handler.hpp  matching_engine.hpp  order.hpp
cpp/src/: matching_engine.cpp
docs/: RESEARCH.md
python/flowbook/: __init__.py  backtest.py  features.py  research.py  simulator.py  strategies.py
scripts/: train_research_model.py
tests/: test_engine.py  test_features.py  test_research.py  test_ring_buffer.py  test_strategies.py
